# discord-gemini-bot

./: .env.example  CHANGELOG.md  Dockerfile  README.md  app.py  bot.py  keep-alive.gs  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.dev-notes/: 2025-11-24.md  2025-12-07.md  2025-12-09.md  2025-12-10.md  2025-12-23.md  2026-01-07.md  2026-01-18.md
.github/: dependabot.yml
.github/workflows/: deploy.yml
.plans/: fix-healthz-endpoint.md  gradio-healthz-single-port.md  healthz-with-fastapi-mount.md  migrate-to-docker-sdk.md
src/: __init__.py  app.py  config.py  main.py
src/ai/: __init__.py  client.py  models.py  rag.py
src/bot/: __init__.py  client.py  handlers.py  history.py
src/utils/: __init__.py  logging.py
